--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-green-snow-acmh1wuh-pooler.sa-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_zB24fJNDLWQO;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "hg"
   },
   "AllowedHosts": "*"
 }
